--- a/corprules.in
+++ b/corprules.in
@@ -264,6 +264,8 @@ SCI_INTRO+4 {
  SCI_INTRO_PARAGRAPH_A 
 
  SCI_INTRO_PARAGRAPH_GENERIC
+ 
+ LAB_IMAGE_MAYBE	
 
  SCI_INTRO_PARAGRAPH_GENERIC
 
@@ -290,6 +292,8 @@ SCI_INTRO+5 {
  SCI_INTRO_PARAGRAPH_GENERIC
 
  SCI_INTRO_PARAGRAPH_THESIS
+ 
+ LAB_IMAGE_MAYBE	
 
  SCI_INTRO_PARAGRAPH_GENERIC
 
@@ -306,6 +310,8 @@ SCI_INTRO+6 {
  SCI_INTRO_HEADER \label{SEC_LABEL}
 
  SCI_INTRO_PARAGRAPH_A 
+ 
+ LAB_IMAGE_MAYBE	
 
  SCI_INTRO_PARAGRAPH_A 
 
@@ -333,6 +339,8 @@ SCI_INTRO {
  SCI_INTRO_HEADER \label{SEC_LABEL}
 
  SCI_INTRO_PARAGRAPH_A 
+ 
+ LAB_IMAGE_MAYBE	
 
  SCI_INTRO_PARAGRAPH_GENERIC
 
@@ -1071,6 +1079,8 @@ IMPL_INTRO_P
 
 RELWORK_BODY_P_FEW
 
+SCI_IMAGE_MAYBE
+
 IMPL_INTRO_P
 
 CONCL_BODY_INSIDE
@@ -1083,6 +1093,8 @@ IMPL_SEC_LATEX_HEADER \label{SEC_LABEL}
 
 IMPL_INTRO_P
 
+SCI_IMAGE_MAYBE
+
 RELWORK_BODY_P_MANY
 
 IMPL_INTRO_P
@@ -1094,6 +1106,8 @@ SCI_IMPL {
 IMPL_SEC_LATEX_HEADER \label{SEC_LABEL} 
 
 IMPL_INTRO_P
+
+SCI_IMAGE_MAYBE
 
 RELWORK_BODY_P_MANY
 
@@ -1110,6 +1124,8 @@ IMPL_SEC_LATEX_HEADER \label{SEC_LABEL}
 IMPL_INTRO_P
 
 RELWORK_BODY_P_MANY
+
+SCI_IMAGE_MAYBE
 
 RELWORK_BODY_P_FEW
 
@@ -1241,6 +1257,8 @@ IMPL_SEC_MATH_HEADER \label{SEC_LABEL}
 
 IMPL_INTRO_P
 
+LAB_IMAGE_MAYBE
+
 LEMMA
 
 EVAL_SEC_INTRO
@@ -1282,6 +1300,8 @@ IMPL_SEC_MATH_HEADER \label{SEC_LABEL}
  SCI_INTRO_PARAGRAPH_CONTR
 
  DISCUSSIONPARA
+ 
+ LAB_IMAGE_MAYBE
 
 PROPOSITIONENV
 
@@ -1356,6 +1376,8 @@ CORP_HEADER \label{SEC_LABEL}
 
 PIE_HIGH
 
+CORP_IMAGE_MAYBE
+
 DOTPARA
 
 PIE_HIGH
@@ -1370,6 +1392,8 @@ SCI_CORP {
 CORP_HEADER \label{SEC_LABEL}
 
 IMPL_INTRO_P
+
+CORP_IMAGE_MAYBE
 
 PIE_HIGH
 
@@ -1388,7 +1412,11 @@ CORP_HEADER \label{SEC_LABEL}
 
 EVAL_SEC_INTRO
 
+CORP_IMAGE_MAYBE
+
 PIE_HIGH
+
+LAB_IMAGE_MAYBE
 
 DOTPARA
 
@@ -1407,9 +1435,13 @@ RELWORK_INTRO_P
 
 PIE_HIGH
 
+CORP_IMAGE_MAYBE
+
 DOTPARA
 
 PIE_HIGH
+
+LAB_IMAGE_MAYBE
 
 DOTPARA
 
@@ -1906,6 +1938,8 @@ SCI_EVAL {
  EVAL_SEC_LATEX_HEADER \label{SEC_LABEL}
 
  EVAL_SEC_INTRO 
+ 
+ SCI_IMAGE_MAYBE
 
  EVAL_SEC_SUBHEAD_1_LTX
 
@@ -1922,6 +1956,8 @@ SCI_EVAL {
  EVAL_SEC_SUBHEAD_2_LTX
 
  LATEX_TABLE
+ 
+ LAB_IMAGE_MAYBE	
  
  LATEX_DIAGRAM_MAYBE
 
@@ -1945,6 +1981,8 @@ SCI_EVAL {
  EVAL_SEC_SUBHEAD_1_LTX
 
  EVAL_SEC_HARDWARE_P 
+ 
+ SCI_IMAGE_MAYBE	
 
  LATEX_TABLE
 
@@ -2010,6 +2048,8 @@ SCI_EVAL {
  LATEX_TABLE  
 
  EVAL_SEC_HARDWARE_P 
+ 
+  LAB_IMAGE_MAYBE
 
  EVAL_GUTS
 
@@ -2041,6 +2081,8 @@ SCI_EVAL {
  EVAL_SEC_SUBHEAD_1_LTX
 
  EVAL_SEC_SOFTWARE_P
+ 
+ SCI_IMAGE_MAYBE
 
  LATEX_FIGURE_MAYBE
 
@@ -6716,6 +6758,111 @@ LATEX_BIBSTYLE
 
 LATEX_TITLE \title{SCI_TITLE}
 LATEX_AUTHORS \author{SCIAUTHORS}
+
+CORP_IMAGE_MAYBE+10
+
+CORP_IMAGE {
+
+\begin{figure}[thp]
+\centerline{\includegraphics[width=2.5in]{LATEX_CORP_FILENAME}}
+\caption{\small{SCI_CORP_CAPTION}}
+\label{LATEX_CORP_LABEL}
+\end{figure}
+}
+
+LATEX_CORP_FILENAME corpimageNEWCORPNUM+.jpg
+NEWCORPNUM\+
+NEWCORPNUM\#
+
+LATEX_CORP_LABEL corp:labelNEWCORPNUM+
+LATEX_CORP_LABEL_REF corp:labelNEWCORPNUM#
+
+SCI_CORP_CAPTION CORPCAPBEGIN: OVERVERBING IMPL_COMPONENTs in THE_WILD. 
+SCI_CORP_CAPTION CORPCAPBEGIN, ready to help.
+SCI_CORP_CAPTION CORPCAPBEGIN, on the take 
+SCI_CORP_CAPTION CORPCAPBEGIN, on call 24/7
+SCI_CORP_CAPTION Bending over backwards to help SCI_VERB_PL with OURSELVES FUNNEND
+SCI_CORP_CAPTION transforming the EXP_ADJ SCI_VERBION CRAZYCOMPARISON
+SCI_CORP_CAPTION CORPCAPBEGIN- INITIALS GENERIC_LASTNAME and INITIALS GENERIC_LASTNAME- SCI_PEOPLE in SCI_FIELD
+SCI_CORP_CAPTION CORPCAPBEGIN: OVERVERBING SCI_BUZZWORD_NOUN in progress
+
+CORPCAPBEGIN+5  KEYTHE DEDICATED TEAM
+CORPCAPBEGIN	The moneyshot
+CORPCAPBEGIN	Action shot
+
+DEDICATED+5
+DEDICATED dedicated
+DEDICATED GENERAL
+DEDICATED hot
+DEDICATED awesome
+DEDICATED budding
+DEDICATED `crack'
+DEDICATED lovely
+DEDICATED heroic
+DEDICATED gentle
+DEDICATED affable
+
+TEAM+5 team
+TEAM+3 staff
+TEAM LOWLY_PEOPLE
+TEAM officers
+
+
+LAB_IMAGE_MAYBE+10
+
+LAB_IMAGE {
+
+\begin{figure}[thp]
+\centerline{\includegraphics[width=2.5in]{LATEX_LAB_FILENAME}}
+\caption{\small{SCI_LAB_CAPTION}}
+\label{LATEX_LAB_LABEL}
+\end{figure}
+}
+
+LATEX_LAB_FILENAME labimageNEWLABNUM+.jpg
+NEWLABNUM\+
+NEWLABNUM\#
+
+LATEX_LAB_LABEL lab:labelNEWLABNUM+
+LATEX_LAB_LABEL_REF lab:labelNEWLABNUM#
+
+LABADDR CITE_INST
+LABADDR CITE_INST, ADDR
+SCI_LAB_CAPTION KEYTHE Headquarters of LABADDR. 
+
+
+SCI_IMAGE_MAYBE+10
+
+SCI_IMAGE {
+
+\begin{figure}[thp]
+\centerline{\includegraphics[width=2.5in]{LATEX_SCI_FILENAME}}
+\caption{\small{SCI_SCI_CAPTION}}
+\label{LATEX_SCI_LABEL}
+\end{figure}
+}
+
+LATEX_SCI_FILENAME sciimageNEWLABNUM+.jpg
+NEWSCINUM\+
+NEWSCINUM\#
+
+LATEX_SCI_LABEL sci:labelNEWSCINUM+
+LATEX_SCI_LABEL_REF sci:labelNEWSCINUM#
+
+SCIENCE science
+SCIENCE `science'
+SCIENCE SCI_FIELD
+
+SCI_SUF+3
+SCI_SUF SCIENCE never looked so hot. 
+
+SCI_SCI_CAPTION KEYTHE SCIENCE, happening in THE_WILD. SCI_SUF
+SCI_SCI_CAPTION KEYTHE SCIENCE, happening as we speak. SCI_SUF
+SCI_SCI_CAPTION KEYTHE SCIENCE, happening tooth and nail. SCI_SUF
+SCI_SCI_CAPTION KEYTHE SCIENCE, red in tooth and claw. SCI_SUF
+SCI_SCI_CAPTION KEYTHE SCIENCE, SCI_VERBING the PREFIX-EXP_ADJ EVAL_MEASUREMENT_UM. SCI_SUF
+
+
 
 LATEX_FIGURE {
 
