--- a/corprules.in
+++ b/corprules.in
@@ -6779,12 +6779,12 @@ LATEX_CORP_LABEL_REF corp:labelNEWCORPNUM#
 
 SCI_CORP_CAPTION CORPCAPBEGIN: OVERVERBING IMPL_COMPONENTs in THE_WILD. 
 SCI_CORP_CAPTION CORPCAPBEGIN, ready to help.
-SCI_CORP_CAPTION CORPCAPBEGIN, on the take 
-SCI_CORP_CAPTION CORPCAPBEGIN, on call 24/7
-SCI_CORP_CAPTION Bending over backwards to help SCI_VERB_PL with OURSELVES FUNNEND
-SCI_CORP_CAPTION transforming the EXP_ADJ SCI_VERBION CRAZYCOMPARISON
-SCI_CORP_CAPTION CORPCAPBEGIN- INITIALS GENERIC_LASTNAME and INITIALS GENERIC_LASTNAME- SCI_PEOPLE in SCI_FIELD
-SCI_CORP_CAPTION CORPCAPBEGIN: OVERVERBING SCI_BUZZWORD_NOUN in progress
+SCI_CORP_CAPTION CORPCAPBEGIN, on the take.
+SCI_CORP_CAPTION CORPCAPBEGIN, on call 24/7.
+SCI_CORP_CAPTION Bending over backwards to help SCI_VERB_PL with OURSELVES FUNNEND.
+SCI_CORP_CAPTION transforming the EXP_ADJ SCI_VERBION CRAZYCOMPARISON.
+SCI_CORP_CAPTION CORPCAPBEGIN- INITIALS GENERIC_LASTNAME and INITIALS GENERIC_LASTNAME- SCI_PEOPLE in SCI_FIELD.
+SCI_CORP_CAPTION CORPCAPBEGIN: OVERVERBING SCI_BUZZWORD_NOUN in progress.
 
 CORPCAPBEGIN+5  KEYTHE DEDICATED TEAM
 CORPCAPBEGIN	The moneyshot
