--- a/corprules.in
+++ b/corprules.in
@@ -6,7 +6,7 @@
 #    SCIgen is free software; you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
 #    the Free Software Foundation; either version 2 of the License, or
-#    (at your option) any later version.r
+#    (at your option) any later version. 
 #
 #    SCIgen is distributed in the hope that it will be useful,
 #    but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -1791,7 +1791,7 @@ RELWORK_INTRO SCI_OUR_SYSTEM builds on RELATED work in SCI_BUZZWORD_ADJ SCI_BUZZ
 RELWORK_INTRO the concept of SCI_BUZZWORD_ADJ SCI_BUZZWORD_NOUN has been SCI_VERBED before in the literature RELWORK_XXX
 RELWORK_INTRO a major source of our inspiration is early work SCI_BY_WHO_SOMETIMES on SCI_GENERIC_NOUN RELWORK_XXX
 RELWORK_INTRO a number of RELATED SCI_SYSTEM_PL have SCI_VERBED SCI_GENERIC_NOUN, either for the SCI_ACT RELWORK_CITATION or for the SCI_ACT RELWORK_XXX
-RELWORK_INTRO Several SCI_BUZZWORD_ADJ and SCI_SYSTEM_PL have been proposed in the literature RELWORK_XXX
+RELWORK_INTRO Several SCI_BUZZWORD_ADJ SCI_SYSTEM_PL have been proposed in the literature RELWORK_XXX
 RELWORK_INTRO RELWORK_MID_X RELWORK_XXX
 
 RELWORK_MID LIT_MIDDLE_MAYBE RELWORK_MID_X RELWORK_XXX
