--- a/corprules.in
+++ b/corprules.in
@@ -5652,7 +5652,13 @@ PETTY_EXCUSE FUNPRE it wasn't the worst thing we did
 PETTY_EXCUSE FUNPRE I heard some BAD rumours about our supervisor, so let's just leave it at that PETTY_SUF
 PETTY_EXCUSE FUNPRE we may as well clear up that BAD BUSINESS about the `so-called' ILLEGAL WARE; look, they're not even mine, I'm just holding them for a friend
 PETTY_EXCUSE Look, it was one small ADJECTIVE equation; no one will know
-PETTY_EXCUSE I want my pen back. It \emph{wasn't yours to keep}, SCI_SOURCE
+PETTY_EXCUSE I want my PEN back. 
+PEN pen
+PEN biro
+PEN pencil
+PEN USB stick
+KEEPMAYBE 
+KEEPMAYBE It \emph{wasn't yours to keep}, SCI_SOURCE
 PETTY_EXCUSE FUNPRE we're all just crawling around on this space-rock anyway
 PETTY_EXCUSE The final FINDINGs remain incomplete, as it got past my bedtime and THEYWEREMEAN
 
@@ -6791,9 +6797,11 @@ CORPCAPBEGIN	The moneyshot
 CORPCAPBEGIN	Action shot
 
 DEDICATED+5
+DEDICATED ILLEGAL
 DEDICATED dedicated
 DEDICATED GENERAL
 DEDICATED hot
+DEDICATED hotbod
 DEDICATED awesome
 DEDICATED budding
 DEDICATED `crack'
@@ -6801,6 +6809,12 @@ DEDICATED lovely
 DEDICATED heroic
 DEDICATED gentle
 DEDICATED affable
+DEDICATED friendly
+DEDICATED sexy
+DEDICATED ardent
+DEDICATED passionate
+DEDICATED gorgeous
+DEDICATED daring
 
 TEAM+5 team
 TEAM+3 staff
@@ -6855,13 +6869,24 @@ SCIENCE SCI_FIELD
 
 SCI_SUF+3
 SCI_SUF SCIENCE never looked so hot. 
+SCI_SUF Many LABRATS died to bring you this level of DIFFERENT EVAL_MEASUREMENT_UM. 
+
+LABRATS+3 lab rats
+LABRATS grad students
+LABRATS inappropriate animal subjects
+LABRATS BAD biological samples
+LABRATS Bothans
+
 
 SCI_SCI_CAPTION KEYTHE SCIENCE, happening in THE_WILD. SCI_SUF
 SCI_SCI_CAPTION KEYTHE SCIENCE, happening as we speak. SCI_SUF
 SCI_SCI_CAPTION KEYTHE SCIENCE, happening tooth and nail. SCI_SUF
 SCI_SCI_CAPTION KEYTHE SCIENCE, red in tooth and claw. SCI_SUF
 SCI_SCI_CAPTION KEYTHE SCIENCE, SCI_VERBING the PREFIX-EXP_ADJ EVAL_MEASUREMENT_UM. SCI_SUF
-
+SCI_SCI_CAPTION KEYTHE SCIENCE, SCI_VERBING the PREFIX-EXP_ADJ EVAL_MEASUREMENT_UM. SCI_SUF
+SCI_SCI_CAPTION KEYTHE SCI_PERSONs, motivated to SCI_TRY, for \textit{you}. SCI_SUF
+SCI_SCI_CAPTION KEYTHE SCI_PERSONs, working hard SCI_PROVE_VERBING \textit{your} most BAD scientific SCI_PROBLEM_PL. SCI_SUF
+SCI_SCI_CAPTION SCIENCE: even the most AMBITIOUS SCI_PROBLEM_PL were SCI_PROVE_VERBED to align with GENERAL OPINION. SCI_SUF
 
 
 LATEX_FIGURE {
@@ -8462,7 +8487,7 @@ SCI_TRY+20 give it the old `college try'
 SCI_TRY+20 endeavour to make a concerted effort
 SCI_TRY+20 strive to attain such a noble SCI_GOAL
 SCI_TRY+20 make a HUGEX effort
-SCI_TRY	   do our DARN
+SCI_TRY+10   do our DARN
 SCI_TRY SCI_TRY, to the best of our ability
 
 HUGE huge
