--- a/corprules.in
+++ b/corprules.in
@@ -2285,7 +2285,7 @@ EVAL_SEC_HYP_SET+10 	our overall EVALUATION seeks to SCI_PROVE_VERB four SCI_GUE
 EVAL_SEC_HYP_SET+10 FILLER_SENTENCE
 EVAL_SEC_HYP_SET HEROIC_OVERSTATEMENT
 EVAL_SEC_HYP_SET PETTY_EXCUSE
-EVAL_SEC_HYP_SET HEROIC_OVERSTATEMENT PETTY_EXCUSE
+EVAL_SEC_HYP_SET HEROIC_OVERSTATEMENT. PETTY_EXCUSE
 
 AFFECT		affect
 AFFECT		impact
@@ -6770,7 +6770,7 @@ CORP_IMAGE_MAYBE+10
 CORP_IMAGE {
 
 \begin{figure}[thp]
-\centerline{\includegraphics[width=2.5in]{LATEX_CORP_FILENAME}}
+\centerline{\includegraphics[width=3in]{LATEX_CORP_FILENAME}}
 \caption{\small{SCI_CORP_CAPTION}}
 \label{LATEX_CORP_LABEL}
 \end{figure}
@@ -6784,9 +6784,9 @@ LATEX_CORP_LABEL corp:labelNEWCORPNUM+
 LATEX_CORP_LABEL_REF corp:labelNEWCORPNUM#
 
 SCI_CORP_CAPTION CORPCAPBEGIN: OVERVERBING IMPL_COMPONENTs in THE_WILD. 
-SCI_CORP_CAPTION CORPCAPBEGIN, ready to help.
-SCI_CORP_CAPTION CORPCAPBEGIN, on the take.
-SCI_CORP_CAPTION CORPCAPBEGIN, on call 24/7.
+SCI_CORP_CAPTION CORPCAPBEGIN: ready to help.
+SCI_CORP_CAPTION CORPCAPBEGIN: on the take.
+SCI_CORP_CAPTION CORPCAPBEGIN: on call 24/7.
 SCI_CORP_CAPTION Bending over backwards to help SCI_VERB_PL with OURSELVES FUNNEND.
 SCI_CORP_CAPTION transforming the EXP_ADJ SCI_VERBION CRAZYCOMPARISON.
 SCI_CORP_CAPTION CORPCAPBEGIN- INITIALS GENERIC_LASTNAME and INITIALS GENERIC_LASTNAME- SCI_PEOPLE in SCI_FIELD.
@@ -6827,7 +6827,7 @@ LAB_IMAGE_MAYBE+10
 LAB_IMAGE {
 
 \begin{figure}[thp]
-\centerline{\includegraphics[width=2.5in]{LATEX_LAB_FILENAME}}
+\centerline{\includegraphics[width=3in]{LATEX_LAB_FILENAME}}
 \caption{\small{SCI_LAB_CAPTION}}
 \label{LATEX_LAB_LABEL}
 \end{figure}
@@ -6850,7 +6850,7 @@ SCI_IMAGE_MAYBE+10
 SCI_IMAGE {
 
 \begin{figure}[thp]
-\centerline{\includegraphics[width=2.5in]{LATEX_SCI_FILENAME}}
+\centerline{\includegraphics[width=3in]{LATEX_SCI_FILENAME}}
 \caption{\small{SCI_SCI_CAPTION}}
 \label{LATEX_SCI_LABEL}
 \end{figure}
