--- a/corprules.in
+++ b/corprules.in
@@ -2282,10 +2282,10 @@ EVAL_SEC_HYP_SET+10 	our overall EVALUATION seeks to SCI_PROVE_VERB two SCI_GUES
 EVAL_SEC_HYP_SET+10 	our overall EVALUATION seeks to SCI_PROVE_VERB three SCI_GUESSES: (1) EVAL_SEC_HYPOTHESIS; (2) EVAL_SEC_HYPOTHESIS; and finally (3) EVAL_SEC_HYPOTHESIS.
 EVAL_SEC_HYP_SET+10 	our overall EVALUATION seeks to SCI_PROVE_VERB four SCI_GUESSES: (1) EVAL_SEC_HYPOTHESIS; (2) EVAL_SEC_HYPOTHESIS; (3) EVAL_SEC_HYPOTHESIS; and finally (4) EVAL_SEC_HYPOTHESIS.
 
-EVAL_SEC_HYP_SET+10 FILLER_SENTENCE
-EVAL_SEC_HYP_SET HEROIC_OVERSTATEMENT
-EVAL_SEC_HYP_SET PETTY_EXCUSE
-EVAL_SEC_HYP_SET HEROIC_OVERSTATEMENT. PETTY_EXCUSE
+EVAL_SEC_HYP_SET+10 FILLER_SENTENCE.
+EVAL_SEC_HYP_SET+5 HEROIC_OVERSTATEMENT.
+EVAL_SEC_HYP_SET+5 PETTY_EXCUSE.
+EVAL_SEC_HYP_SET+5 HEROIC_OVERSTATEMENT. PETTY_EXCUSE.
 
 AFFECT		affect
 AFFECT		impact
@@ -5667,7 +5667,7 @@ THEYWEREMEAN they made me switch the computer off
 THEYWEREMEAN they wouldn't let me stay up (not my fault)
 
 PETTY_EXCUSE And for the last time, that BUSINESS with the ILLEGAL SCI_PROBLEM, it was an \emph{accident}; so let's not name names
-PETTY_EXCUSE It was perfect before \emph{you} edited this...
+PETTY_EXCUSE It was perfect before \emph{you} edited this..
 PETTY_EXCUSE It made sense in my mind anyway
 PETTY_EXCUSE It read well last night in the Professor's hot tub, anyway
 
@@ -5675,7 +5675,7 @@ FILLER_SENTENCE FILLER_SENTENCE FUNNEND
 
 FILLER_SENTENCE HEROIC_OVERSTATEMENT
 FILLER_SENTENCE PETTY_EXCUSE
-FILLER_SENTENCE HEROIC_OVERSTATEMENT PETTY_EXCUSE
+FILLER_SENTENCE HEROIC_OVERSTATEMENT. PETTY_EXCUSE
 
 FILLER_SENTENCE+30	FILLER_SURPRISE
 FILLER_SENTENCE+15		SCI_B_LEADIN_C TAKE_NOTE_THAT our SCI_GOAL here is to set the record straight on the issue of SCI_BUZZWORD_ADJ SCI_BUZZWORD_NOUN
