--- a/corprules.in
+++ b/corprules.in
@@ -783,7 +783,7 @@ SCI_MODEL {
 }
 
 LATEX_DIAGRAM_MAYBE LATEX_DIAGRAM
-LATEX_DIAGRAM_MAYBE+10
+LATEX_DIAGRAM_MAYBE+5
 
 GANTT_MAYBE GANTT
 GANTT_MAYBE+10
@@ -1927,7 +1927,7 @@ EVAL_SEC_HEADER_T		ADJECTIVE SCI_THING in a Global Society
 
 
 LATEX_FIGURE_MAYBE LATEX_FIGURE
-LATEX_FIGURE_MAYBE+15
+LATEX_FIGURE_MAYBE+30
 
 LATEX_TABLE_MAYBE LATEX_TABLE
 LATEX_TABLE_MAYBE+15
@@ -2692,7 +2692,7 @@ EXP_ADJ+20		matriculated
 EXP_ADJ+20		articulated
 EXP_ADJ+20		subatomic
 EXP_ADJ+20		mechanised
-EXP_ADJ+30	 	COMP_ADJ
+EXP_ADJ+50	 	COMP_ADJ
 EXP_ADJ+20		PREFIXXposable
 EXP_ADJ+20		contingent
 EXP_ADJ+20		reflexive
@@ -3905,7 +3905,7 @@ SCI_THING_S    EXP_ADJ sensing
 SCI_THING_S    EXP_ADJ apparatus
 SCI_THING_S    EXP_ADJ resonance
 SCI_THING_P    EXP_ADJ apparatus
-SCI_THING_S+2    COMP_NOUN
+SCI_THING_S+10    COMP_NOUN
 
 SCI_THING_MOD+20	SCI_THING_P 
 SCI_THING_MOD+25 MNOUNS of SCI_THING_P  
@@ -4966,7 +4966,7 @@ SCI_ADJ_ADV+10  surely
 SCI_ADJ_ADV+20	increasingly 
 SCI_ADJ_ADV	wankingly
 SCI_ADJ_ADV SCI_MATH_ADV
-SCI_ADJ_ADV+10 COMP_ADV
+SCI_ADJ_ADV+20 COMP_ADV
 SCI_ADJ_ADV+10 very
 SCI_ADJ_ADV+10 highly
 SCI_ADJ_ADV+10 inconsequentially
@@ -5235,9 +5235,9 @@ SCI_VERB+20	establish
 SCI_VERB+20	activate
 SCI_VERB+20	reflect
 SCI_VERB+20	study
-SCI_VERB+30	COMP_VERB
-SCI_VERB	wank out 
-SCI_VERB	GOOD_VERB
+SCI_VERB+50	COMP_VERB
+SCI_VERB+5	wank out 
+SCI_VERB+10	GOOD_VERB
 #SCI_VERB+10	function in the place of  
 
 SCI_VERBS	harnesses
@@ -8811,7 +8811,7 @@ ADVERB trivially
 ADVERB unconditionally
 ADVERB universally
 
-
+PREFIXX	flexi
 PREFIXX	edu
 PREFIXX orga
 PREFIXX semi
