--- a/corprules.in
+++ b/corprules.in
@@ -5585,6 +5585,8 @@ PENCHANT enthusiasm
 PENCHANT obsession
 PENCHANT taste
 PENCHANT passion
+PENCHANT proclivity
+PENCHANT sweet tooth
 
 VERACITY veracity
 VERACITY believability
