--- a/corprules.in
+++ b/corprules.in
@@ -6901,8 +6901,8 @@ SCI_SCI_CAPTION KEYTHE SCIENCE, happening tooth and nail. SCI_SUF
 SCI_SCI_CAPTION KEYTHE SCIENCE, red in tooth and claw. SCI_SUF
 SCI_SCI_CAPTION KEYTHE SCIENCE, SCI_VERBING the PREFIX-EXP_ADJ EVAL_MEASUREMENT_UM. SCI_SUF
 SCI_SCI_CAPTION KEYTHE SCIENCE, SCI_VERBING the PREFIX-EXP_ADJ EVAL_MEASUREMENT_UM. SCI_SUF
-SCI_SCI_CAPTION KEYTHE SCI_PERSONs, motivated to SCI_TRY, for \textit{you}. SCI_SUF
-SCI_SCI_CAPTION KEYTHE SCI_PERSONs, working hard SCI_PROVE_VERBING \textit{your} most BAD scientific SCI_PROBLEM_PL. SCI_SUF
+SCI_SCI_CAPTION KEYTHE SCI_PERSONs' research, motivated to SCI_TRY, for \textit{you}. SCI_SUF
+SCI_SCI_CAPTION KEYTHE SCI_PERSONs' research, working hard SCI_PROVE_VERBING \textit{your} most BAD scientific SCI_PROBLEM_PL. SCI_SUF
 SCI_SCI_CAPTION SCIENCE: even the most AMBITIOUS SCI_PROBLEM_PL were SCI_PROVE_VERBED to align with GENERAL OPINION. SCI_SUF
 
 
@@ -7638,7 +7638,6 @@ INSTPRE Government
 INSTPRE Imperial
 INSTPRE Scientific
 INSTPRE Private
-INSTPRE GENERAL
 INSTPRE+2 FAMOUSLAST
 
 INSTPRE2+5 INSTPRE
