--- a/corprules.in
+++ b/corprules.in
@@ -589,7 +589,7 @@ SCI_INTRO_GENERIC_MID LIT_LEADIN we view SCI_FIELD as following a cycle of four 
 CI_INTRO_GENERIC_MID LIT_LEADIN we METAVERB BIGTHEOREM, that SCI_FIELD follows three SCI_ADJ SCI_STAGEs: EXP_ADJ SCI_VERBION, SCI_SYS_VERBION and EXP_ADJ SCI_SYS_VERBION 
 SCI_INTRO_GENERIC_MID LIT_LEADIN for example, SCI_ANUMBER SCI_SYSTEM_PL SCI_SYS_VERB SCI_GENERIC_NOUN in order to SCI_GOAL_ACHIEVE ADJECTIVE CONSTRAINT_TYPE
 SCI_INTRO_GENERIC_MID LIT_REVERSAL, this SCI_APPROACH is LIT_OFTEN SCI_REACTION REACTBYWHO
-SCI_INTRO_GENERIC_MID LIT_LEADIN SCI_SYSTEM_PL boils down to two SCI_MAIN premises: that SCI_OVERALL_THESIS_PROVE, and that SCI_OVERALL_THESIS_PROVE
+SCI_INTRO_GENERIC_MID LIT_LEADIN SCI_SYSTEM boils down to two SCI_MAIN premises: that SCI_OVERALL_THESIS_PROVE, and that SCI_OVERALL_THESIS_PROVE
 SCI_INTRO_GENERIC_MID LIT_ALTHOUGH SCI_THING_P SCI_EFFECT, OBS_ENDMAYBELAME
 SCI_INTRO_GENERIC_MID BTEXT
 SCI_INTRO_GENERIC_MID as BAD as it sounds, only LOWLY_PEOPLE would be so PERVERSE as to SCI_IMAGINE that SCI_OVERALL_THESIS_PROVE
