--- a/corprules.in
+++ b/corprules.in
@@ -7163,13 +7163,15 @@ NTSKS 12
 TASKS {
 
 \Task{NEWTASKNUM+}{NEWTASKLABEL+. 
-OVERVERBING EXP_ADJ SCI_BUZZWORD_NOUN}{NEARSTART}{NEAREND}
+\titcap{OVERVERBING} 
+EXP_ADJ SCI_BUZZWORD_NOUN}{NEARSTART}{NEAREND}
 }
 
 TASKS {
 
 \Task{NEWTASKNUM+}{NEWTASKLABEL+. 
-OVERVERBING \hyphenchar\font=-1 EXP_ADJ SCI_BUZZWORD_NOUN}{FARSTART}{FAREND}
+\titcap{OVERVERBING} 
+\hyphenchar\font=-1 EXP_ADJ SCI_BUZZWORD_NOUN}{FARSTART}{FAREND}
 }
 
 TASKLIST TASKS TASKS TASKS 
