--- a/corprules.in
+++ b/corprules.in
@@ -8999,26 +8999,26 @@ COMPMID_ num
 COMPMID_ com
 COMPMID_ math
 COMPMID_ prov
-COMPMID_ estab
+COMPMID_ LOWRCestab
 COMPMID_ comput
 COMPMID_ pharm
 COMPMID_ qual
-COMPMID_ abs
-COMPMID_ us
+COMPMID_ LOWRCabs
+COMPMID_ LOWRCus
 COMPMID_ func
 COMPMID_ sens
-COMPMID_ opt
+COMPMID_ LOWRCopt
 COMPMID_ pter
-COMPMID_ oc
-COMPMID_ ob
-COMPMID_ ab
-COMPMID_ in
-COMPMID_ an
-COMPMID_ arch
+COMPMID_ LOWRCoc
+COMPMID_ LOWRCob
+COMPMID_ LOWRCab
+COMPMID_ LOWRCin
+COMPMID_ LOWRCan
+COMPMID_ LOWRCarch
 COMPMID_ cred
 COMPMID_ dom
 COMPMID_ dynam
-COMPMID_ idem
+COMPMID_ LOWRCidem
 COMPMID_ liber
 COMPMID_ man
 COMPMID_ fem
