--- a/corprules.in
+++ b/corprules.in
@@ -6960,6 +6960,8 @@ SCIENCE SCI_FIELD
 SCI_SUF+3
 SCI_SUF KEYTHE SCIENCE never looked so hot. 
 SCI_SUF Many LABRATS died to bring you this level of DIFFERENT EVAL_MEASUREMENT_UM. 
+SCI_SUF LAME_OBSERVATION
+SCI_SUF SCI_INTRO_FILLER
 
 LABRATS+3 lab rats
 LABRATS grad students
