--- a/corprules.in
+++ b/corprules.in
@@ -7169,7 +7169,7 @@ TASKS {
 
 \Task{NEWTASKNUM+}{NEWTASKLABEL+. 
 \titcap{OVERVERBING} 
-EXP_ADJ SCI_BUZZWORD_NOUN}{NEARSTART}{NEAREND}
+\hyphenchar\font=-1 EXP_ADJ SCI_BUZZWORD_NOUN}{NEARSTART}{NEAREND}
 }
 
 TASKS {
